# generate-cloudformation-schema

./: README.md  pyproject.toml  setup.cfg
docs/source/: conf.py  index.rst
src/generate_cloudformation_schema/: schema_store.py  schema_types.py  source_urls.py  spec_schema.py  spec_types.py
test/: test_spec_schema.py
test/assets/: test_spec_def_1.json  test_spec_def_2.json
